@@ -1,3 +1,11 @@
+2006-10-09  Luca Cavalli  <lcavalli@cvs.gnome.org>
+
+	* gnome-da-capplet.c: (web_gconf_changed_cb):
+	* gnome-da-capplet.h:
+
+	Added support for legacy gconf key. Based on a patch from Sven
+	Herzberg <herzi@gnome-de.org>. Closes bug #359986.
+
 2006-07-23  Sebastien Bacher  <seb128@debian.org>
 
 	* default-applications.desktop.in.in: don't list the Application 
